Bug 79144 - XY scatter chart does not show data points in 'Points and Lines'
Summary: XY scatter chart does not show data points in 'Points and Lines'
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: All All
: high normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:4.3.0.2
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2014-05-23 17:33 UTC by Jorendc
Modified: 2015-12-17 08:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample data (13.40 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-05-23 17:34 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2014-05-23 17:33:22 UTC
How to reproduce:

* Type some data in column A and B
* Select data
* Insert chart
* XY (scatter) - Points and Lines
* Click finish button

Behavior: No points are visible on the chart

Tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.beta1 
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f

Not reproducible using version 4.2.4.2
-> Regression

If you create a chart with 4.2 or prior, and open it using 4.3 beta 1, the data points are visible.

Kind regards,
Joren
Comment 1 Jorendc 2014-05-23 17:34:49 UTC
Created attachment 99666 [details]
Sample data
Comment 2 Joel Madero 2014-05-23 19:15:40 UTC
Ubuntu 14.04
LibreOffice 4.3 Beta1

Confirmed
 6a2f0dcb5a34b80fdba913f4db2f36ce4975db44 is the first bad commit
commit 6a2f0dcb5a34b80fdba913f4db2f36ce4975db44
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sun May 11 20:14:08 2014 +0000

    source-hash-2589d9e3e6e9fab18ff735561991a3dcdd3d8b4b
    
    commit 2589d9e3e6e9fab18ff735561991a3dcdd3d8b4b
    Author:     Norbert Thiebaud <nthiebaud@gmail.com>
    AuthorDate: Mon Mar 3 18:36:38 2014 -0600
    Commit:     Norbert Thiebaud <nthiebaud@gmail.com>
    CommitDate: Mon Mar 3 18:37:15 2014 -0600
    
        coverity#738727: Unitialized scalar field
    
        Change-Id: I37bdf601f7a6bb179f8a14dfb22d3e102868fea1

:100644 100644 3ba1e23da4c5fd856ca77edeccf35fd8f981d2fb 92c5df078bd2356a2b4b3f3bab5dab0d2a074f96 M	autogen.log
:100644 100644 5da83ef1a73c852acba2193baa023808afaecfcb 35b98cf4e7132db444ade1a8fbe702ce239fa043 M	ccache.log
:100644 100644 d52b1f94ada187469913ba3cc2d95ef8260f059b d0a147531c455fcc393f56b5c47aefc124741d31 M	commitmsg
:100644 100644 27e78072edf8aaacff4d36dc84c6bca2985ac17a 7e5e035059fa93faf911711f22cb7f7e088421da M	make.log
:040000 040000 b8f0d08bc0f51eec3f61beaa6fe72a45487bb446 49bc91d0282657b62fdddd7baba1b8bed4ad07f9 M	opt


# bad: [ea24c76037fa8056fb1ed916f4d5e765ebc71f8f] source-hash-46cfcd5a05aa1d13fecd73f5a25b64b8d8dd6781
# good: [6ab7f53af36f13bbefdd4e4fcbd3d1ea432a77d9] source-hash-22029c7e17b4cb48acb058d47ec9c3b6b8b6b294
git bisect start 'latest' 'oldest'
# good: [45f8b50e2e33d2125a348134dd931ba01c70fe63] source-hash-0141153498bc34237d5b7dd72226ac2a03bbd11d
git bisect good 45f8b50e2e33d2125a348134dd931ba01c70fe63
# bad: [5db055097f534d5688da0ca8cea9ac65c542895f] source-hash-7b56d303300fbf592473b28b654fd22fec110962
git bisect bad 5db055097f534d5688da0ca8cea9ac65c542895f
# good: [781d8b79e3dd4cc84a0d179598b75ad1060728d5] source-hash-aee12451d1d99881833b9f6a1a6af5598802801a
git bisect good 781d8b79e3dd4cc84a0d179598b75ad1060728d5
# bad: [1f6f4cde2c8e90a3a863c66ba833a97ea6a06be0] source-hash-2be3417bf6dba2a0897b21e15d22ef2f8aac99e3
git bisect bad 1f6f4cde2c8e90a3a863c66ba833a97ea6a06be0
# bad: [1470f06eba5d367d7adae5f3bb532b244cbdaa99] source-hash-76fe205d7e0fe0a73616453209d8094cab9ce79f
git bisect bad 1470f06eba5d367d7adae5f3bb532b244cbdaa99
# bad: [6a2f0dcb5a34b80fdba913f4db2f36ce4975db44] source-hash-2589d9e3e6e9fab18ff735561991a3dcdd3d8b4b
git bisect bad 6a2f0dcb5a34b80fdba913f4db2f36ce4975db44
# good: [daee210251d3f31350de663e6af8e2cd13507471] source-hash-ab1f5eab4830f00dbbd7c883b98b59975ecd3bb1
git bisect good daee210251d3f31350de663e6af8e2cd13507471
# first bad commit: [6a2f0dcb5a34b80fdba913f4db2f36ce4975db44] source-hash-2589d9e3e6e9fab18ff735561991a3dcdd3d8b4b
Comment 3 Kohei Yoshida 2014-06-20 03:49:52 UTC
I tried the master branch build from today and could not reproduce this.
Comment 4 Markus Mohrhard 2014-06-22 22:44:14 UTC
It was somehow lost in the dialog conversion. I have an idea which part of the dialogs was responsible that it worked but I have a much cleaner and better solution.
Comment 5 Jorendc 2014-06-23 12:18:51 UTC
(In reply to comment #3)
> I tried the master branch build from today and could not reproduce this.

Mmh, still can reproduce using a Mac OSX master 4.4 from June 13th (last available daily build).

(In reply to comment #4)
> It was somehow lost in the dialog conversion. I have an idea which part of
> the dialogs was responsible that it worked but I have a much cleaner and
> better solution.

Lovely :). Thanks Markus.
Comment 6 Markus Mohrhard 2014-06-23 12:23:21 UTC
Forgot the bug number in the commit:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bdd87b2acddb2e244569dcc8f228e270614dc59e
Comment 7 Commit Notification 2014-06-23 18:49:38 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=081df814982da742c8372bef3ffc93e391aa2ce9&h=libreoffice-4-3

XY chart needs to set the X value property, fdo#79144


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 08:13:28 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]