XY chart needs to set the X value property, fdo#79144

Change-Id: Ib17b564c187dfec8abb7a17b2602f814362dd34f